--- a/embed.html
+++ b/embed.html
@@ -24,8 +24,28 @@
       background: transparent !important;
     }
 
-    /* WICHTIG:
-       KEIN pad/offset hier – sonst verschiebt es das Widget weg von der Ecke. */
+    /* Avatar: Bild sauber in den Kreis clippen */
+    .cw-header-avatar {
+      overflow: hidden;
+    }
+    .cw-header-avatar img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 999px;
+      object-fit: cover;
+    }
+
+    /* Fallback-Icon zentrieren */
+    .cw-avatar-fallback {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 1;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -46,8 +66,9 @@
   <aside id="cw-window" class="cw-window cw-hidden" role="dialog" aria-label="Support-Chat">
     <header class="cw-header">
       <div class="cw-header-left">
-        <div class="cw-header-avatar">
-          <span>AI</span>
+        <div class="cw-header-avatar" aria-label="Bot Avatar">
+          <img id="cw-avatar-img" alt="Bot Avatar" style="display:none;" />
+          <div id="cw-avatar-fallback" class="cw-avatar-fallback" aria-hidden="true">◉</div>
         </div>
 
         <div class="cw-header-texts">
