--- a/embed.html
+++ b/embed.html
@@ -24,10 +24,29 @@
       background: transparent !important;
     }
 
-    /* Avatar: Bild sauber in den Kreis clippen */
+    /* ---------- Avatar Größen (NEU) ---------- */
+    /* Header Avatar deutlich größer */
     .cw-header-avatar {
+      width: 40px !important;
+      height: 40px !important;
+      min-width: 40px !important;
+      border-radius: 999px !important;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Chat Avatare (links neben Messages) nur leicht größer */
+    .cw-avatar {
+      width: 30px !important;
+      height: 30px !important;
+      min-width: 30px !important;
+      border-radius: 999px !important;
       overflow: hidden;
     }
+
+    /* Avatar: Bild sauber in den Kreis clippen */
     .cw-header-avatar img {
       width: 100%;
       height: 100%;
@@ -36,10 +55,19 @@
       object-fit: cover;
     }
 
-    /* Fallback-Icon zentrieren */
+    /* Fallback-Icon zentrieren + passend skalieren */
     .cw-avatar-fallback {
       width: 100%;
       height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 1;
+      font-size: 16px;
+    }
+
+    /* Falls dein Chat-Avatar Text/Fallback nutzt */
+    .cw-avatar {
       display: flex;
       align-items: center;
       justify-content: center;
