--- a/embed.html
+++ b/embed.html
@@ -2,7 +2,11 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover, maximum-scale=1"
+  />
+  <meta name="format-detection" content="telephone=no" />
   <title>Chat Widget Embed</title>
 
   <link rel="stylesheet" href="./style.css" />
@@ -16,6 +20,7 @@
       padding: 0;
       background: transparent !important;
       overflow: hidden;
+      -webkit-text-size-adjust: 100%;
     }
 
     /* style.css setzt body auf min-height:100vh + weiß; im iframe überschreiben */
@@ -25,7 +30,6 @@
     }
 
     /* ---------- Avatar Größen (NEU) ---------- */
-    /* Header Avatar deutlich größer */
     .cw-header-avatar {
       width: 40px !important;
       height: 40px !important;
@@ -37,7 +41,6 @@
       justify-content: center;
     }
 
-    /* Chat Avatare (links neben Messages) nur leicht größer */
     .cw-avatar {
       width: 30px !important;
       height: 30px !important;
@@ -46,7 +49,6 @@
       overflow: hidden;
     }
 
-    /* Avatar: Bild sauber in den Kreis clippen */
     .cw-header-avatar img {
       width: 100%;
       height: 100%;
@@ -55,7 +57,6 @@
       object-fit: cover;
     }
 
-    /* Fallback-Icon zentrieren + passend skalieren */
     .cw-avatar-fallback {
       width: 100%;
       height: 100%;
@@ -66,7 +67,6 @@
       font-size: 16px;
     }
 
-    /* Falls dein Chat-Avatar Text/Fallback nutzt */
     .cw-avatar {
       display: flex;
       align-items: center;
@@ -76,8 +76,8 @@
     }
   </style>
 </head>
-<body>
 
+<body data-cw-embed="1">
   <!-- Chat-Launcher -->
   <div id="cw-launcher-wrap">
     <div id="cw-greeting" class="cw-greeting">
