--- a/demo.html
+++ b/demo.html
@@ -1,29 +1,10 @@
 <!doctype html>
 <html lang="de">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover, maximum-scale=1"
-    />
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Widget Demo</title>
-
-    <style>
-      /* Demo-Seite: simpel, aber mobile-stabil */
-      html {
-        -webkit-text-size-adjust: 100%;
-      }
-      body {
-        margin: 0;
-        min-height: 200vh;
-        padding: 24px;
-        font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      }
-    </style>
   </head>
-
-  <body>
+  <body style="min-height:200vh;padding:24px;font-family:system-ui;">
     <h1>Widget Demo</h1>
     <p>Scroll ein bisschen, öffne den Chat und teste am Handy.</p>
 
