--- a/embed.html
+++ b/embed.html
@@ -2,11 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, height=device-height, viewport-fit=cover, maximum-scale=1"
-  />
-  <meta name="format-detection" content="telephone=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat Widget Embed</title>
 
   <link rel="stylesheet" href="./style.css" />
@@ -20,7 +16,6 @@
       padding: 0;
       background: transparent !important;
       overflow: hidden;
-      -webkit-text-size-adjust: 100%;
     }
 
     /* style.css setzt body auf min-height:100vh + weiß; im iframe überschreiben */
@@ -30,6 +25,7 @@
     }
 
     /* ---------- Avatar Größen (NEU) ---------- */
+    /* Header Avatar deutlich größer */
     .cw-header-avatar {
       width: 40px !important;
       height: 40px !important;
@@ -41,6 +37,7 @@
       justify-content: center;
     }
 
+    /* Chat Avatare (links neben Messages) nur leicht größer */
     .cw-avatar {
       width: 30px !important;
       height: 30px !important;
@@ -49,6 +46,7 @@
       overflow: hidden;
     }
 
+    /* Avatar: Bild sauber in den Kreis clippen */
     .cw-header-avatar img {
       width: 100%;
       height: 100%;
@@ -57,6 +55,7 @@
       object-fit: cover;
     }
 
+    /* Fallback-Icon zentrieren + passend skalieren */
     .cw-avatar-fallback {
       width: 100%;
       height: 100%;
@@ -67,6 +66,7 @@
       font-size: 16px;
     }
 
+    /* Falls dein Chat-Avatar Text/Fallback nutzt */
     .cw-avatar {
       display: flex;
       align-items: center;
@@ -76,8 +76,8 @@
     }
   </style>
 </head>
+<body>
 
-<body data-cw-embed="1">
   <!-- Chat-Launcher -->
   <div id="cw-launcher-wrap">
     <div id="cw-greeting" class="cw-greeting">
