--- a/embed.html
+++ b/embed.html
@@ -24,8 +24,7 @@
       background: transparent !important;
     }
 
-    /* ---------- Avatar Größen (NEU) ---------- */
-    /* Header Avatar deutlich größer */
+    /* ---------- Avatar Größen ---------- */
     .cw-header-avatar {
       width: 40px !important;
       height: 40px !important;
@@ -37,7 +36,6 @@
       justify-content: center;
     }
 
-    /* Chat Avatare (links neben Messages) nur leicht größer */
     .cw-avatar {
       width: 30px !important;
       height: 30px !important;
@@ -46,7 +44,6 @@
       overflow: hidden;
     }
 
-    /* Avatar: Bild sauber in den Kreis clippen */
     .cw-header-avatar img {
       width: 100%;
       height: 100%;
@@ -55,7 +52,6 @@
       object-fit: cover;
     }
 
-    /* Fallback-Icon zentrieren + passend skalieren */
     .cw-avatar-fallback {
       width: 100%;
       height: 100%;
@@ -66,7 +62,6 @@
       font-size: 16px;
     }
 
-    /* Falls dein Chat-Avatar Text/Fallback nutzt */
     .cw-avatar {
       display: flex;
       align-items: center;
@@ -77,6 +72,9 @@
   </style>
 </head>
 <body>
+
+  <!-- Fullscreen Backdrop (nur aktiv, wenn Chat offen + Mobile) -->
+  <div id="cw-backdrop" class="cw-backdrop cw-hidden" aria-hidden="true"></div>
 
   <!-- Chat-Launcher -->
   <div id="cw-launcher-wrap">
