--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="cw-header-subline">
             <span class="cw-header-status">Online</span>
             <span class="cw-header-separator">–</span>
-            <span class="cw-header-brand">powered by ChatBasis</span>
+            <span class="cw-header-brand">powered by Zeiner-Systems</span>
           </div>
         </div>
       </div>
